Fix page help spacing

--- a/variantgrid/static_files/default_static/css/global_legacy.scss
+++ b/variantgrid/static_files/default_static/css/global_legacy.scss
@@ -501,7 +501,6 @@ li.error {
     .help-footer {
         font-size: 12px;
         color: #888888;
-        padding-bottom: 6px;
     }
     .page-help-logo {
         border: 2px solid white;
